--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "lerna run start",
+    "start": "lerna run start --stream --scope \"@decarbonizer/{frontend,backend}\"",
     "test": "lerna run test",
     "lint": "lerna run lint",
-    "format": "lerna run format"
+    "format": "lerna run format",
+    "uninstall-packages": "npx rimraf **/node_modules && npx rimraf **/package-lock.json"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.0",
@@ -17,7 +18,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "lerna": "^4.0.0",
+    "lerna": "3.22.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.4.4"
