--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.3",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "mongoose": "^6.0.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
