--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "react-icons": "^4.3.1"
   }
 }
