--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,12 +12,14 @@
     "@chakra-ui/react": "1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
-    "react-icons": "^4.3.1"
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
