--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "convert-units": "^3.0.0-beta.2",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
