--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "convert-units": "^3.0.0-beta.2",
     "framer-motion": "^4",
+    "json-conditions": "^1.1.0",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
