--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "json-conditions": "^1.1.0",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-json-view": "^1.21.3",
@@ -26,9 +27,11 @@
     "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@emotion/babel-plugin": "^11.3.0",
     "@types/lodash-es": "^4.17.5",
     "@types/react": "^17.0.33",
+    "@types/react-datepicker": "^4.3.2",
     "@types/react-dom": "^17.0.10",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
