--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -23,7 +23,8 @@
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "recharts": "^2.1.6"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
