--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "packages/*"
   ],
   "scripts": {
+    "prepare": "husky install",
     "start": "lerna run start --stream --scope \"@decarbonizer/{frontend,backend}\"",
     "test": "lerna run test",
     "lint": "lerna run lint",
@@ -18,6 +19,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "lerna": "3.22.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
