--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
+    "curly": "error",
     "prettier/prettier": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
