--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ yarn.lock
 
 # Misc Files
 *.log
+*.tsbuildinfo
 .vscode/settings.json
 
 # Caches
@@ -22,3 +23,4 @@ yarn.lock
 
 # Sensitive files
 .env
+
