--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,7 +9,8 @@
     "build": "nest build",
     "test": "jest",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "lint": "eslint \"src/**/*.{ts,tsx}\""
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
