--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.6",
