--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,7 +10,7 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@chakra-ui/react": "1.6.10",
+    "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.2",
