--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "data-forge": "^1.9.2",
     "distinct-colors": "^1.0.4",
     "convert-units": "^3.0.0-beta.2",
     "framer-motion": "^4",
