--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@react-pdf/renderer": "^2.0.21",
     "@reduxjs/toolkit": "^1.6.2",
     "data-forge": "^1.9.2",
     "distinct-colors": "^1.0.4",
