--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
+    "react-file-base64": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.6",
