--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -31,7 +31,7 @@
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "recharts": "^2.1.6"
+    "recharts": "2.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
