--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "uninstall-packages": "npx rimraf **/node_modules && npx rimraf **/package-lock.json"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "husky": "7.0.4",
     "lerna": "3.22.1",
-    "prettier": "^2.4.1",
-    "pretty-quick": "^3.1.2",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.4.4"
+    "prettier": "2.4.1",
+    "pretty-quick": "3.1.2",
+    "rimraf": "3.0.2",
+    "typescript": "4.4.4"
   }
 }
