--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,40 +10,40 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.7.2",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@react-pdf/renderer": "^2.0.21",
-    "@reduxjs/toolkit": "^1.6.2",
-    "data-forge": "^1.9.2",
-    "distinct-colors": "^1.0.4",
-    "convert-units": "^3.0.0-beta.2",
-    "framer-motion": "^4",
-    "json-conditions": "^1.1.0",
-    "lodash-es": "^4.17.21",
-    "react": "^17.0.2",
-    "react-datepicker": "^4.3.0",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.20.5",
-    "react-file-base64": "^1.0.3",
-    "react-icons": "^4.3.1",
-    "react-json-view": "^1.21.3",
-    "react-redux": "^7.2.6",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "@chakra-ui/react": "1.8.5",
+    "@emotion/react": "11.8.1",
+    "@emotion/styled": "11.8.1",
+    "@react-pdf/renderer": "2.1.1",
+    "@reduxjs/toolkit": "1.7.2",
+    "data-forge": "1.9.2",
+    "distinct-colors": "1.0.4",
+    "convert-units": "3.0.0-beta.2",
+    "framer-motion": "4.1.17",
+    "json-conditions": "1.1.0",
+    "lodash-es": "4.17.21",
+    "react": "17.0.2",
+    "react-datepicker": "4.3.0",
+    "react-dom": "17.0.2",
+    "react-hook-form": "7.20.5",
+    "react-file-base64": "1.0.3",
+    "react-icons": "4.3.1",
+    "react-json-view": "1.21.3",
+    "react-redux": "7.2.6",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.3.0",
     "recharts": "2.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@emotion/babel-plugin": "^11.3.0",
-    "@types/lodash-es": "^4.17.5",
-    "@types/react": "^17.0.33",
-    "@types/react-datepicker": "^4.3.2",
-    "@types/react-dom": "^17.0.10",
-    "@types/react-router": "^5.1.17",
-    "@types/react-router-dom": "^5.3.2",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "parcel": "^2.0.0"
+    "@babel/core": "7.16.0",
+    "@emotion/babel-plugin": "11.3.0",
+    "@types/lodash-es": "4.17.5",
+    "@types/react": "17.0.33",
+    "@types/react-datepicker": "4.3.2",
+    "@types/react-dom": "17.0.10",
+    "@types/react-router": "5.1.17",
+    "@types/react-router-dom": "5.3.2",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "parcel": "2.0.0"
   }
 }
